--- a/cloud-linux-hosting.html
+++ b/cloud-linux-hosting.html
@@ -70,7 +70,7 @@
                 <li><a href="Microsoft-Office-365.html">Microsoft Office 365
                 </a></li>
                 <li><a href="Google-Workspace.html">Google Workspace</a></li>
-                <li><a href="email-hosting.html">Exchange Email</a></li>
+                <li><a href="exchange-email.html">Exchange Email</a></li>
               </ul>
             </li>
           
@@ -383,7 +383,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-7 text-center text-lg-left m-15px-tb">
-          <h3 class="h1 white-color m-0px">All VPS Servers Plans come with 100% up time Guarantee</h3>
+          <h3 class="h1 white-color m-0px">All Cloud Servers Plans come with 100% up time Guarantee</h3>
         </div>
         <div class="col-lg-5 text-center text-lg-right m-15px-tb"> <a class="m-btn m-btn-white m-btn-radius m-btn-shadow" href="#plan">Get Started Now</a> </div>
       </div>
@@ -470,32 +470,32 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="accordion-close accordion-07">
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What are the benefits of VPS Hosting?</a>
-              <div class="acco-des">With VPS, you get complete isolation on a physical server for your hosting. Your Virtual Private Server will be unaffected by other users and with root access you can install whatever applications you require on your server. The CPU, RAM, HDD, and Bandwidth allocated to your VPS Hosting package will always be available for your applications. A VPS server gives you all the features of a Dedicated server at an affordable price.</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> What are the benefits of Cloud Hosting?</a>
+              <div class="acco-des">With Cloud, you get complete isolation on a physical server for your hosting. Your Virtual Private Server will be unaffected by other users and with root access you can install whatever applications you require on your server. The CPU, RAM, HDD, and Bandwidth allocated to your Cloud Hosting package will always be available for your applications. A Cloud server gives you all the features of a Dedicated server at an affordable price.</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Should I Choose Managed or Unmanaged VPS Hosting?</a>
-              <div class="acco-des">If you are looking for an easy upgrade from your Shared Hosting account and want to continue using an intuitive control panel like cPanel, we recommend that you select a Managed VPSaccount. Our expert support team can even seamlessly migrate your existing website into a Managed VPS for free!
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Should I Choose Managed or Unmanaged Cloud Hosting?</a>
+              <div class="acco-des">If you are looking for an easy upgrade from your Shared Hosting account and want to continue using an intuitive control panel like cPanel, we recommend that you select a Managed Cloud account. Our expert support team can even seamlessly migrate your existing website into a Managed Cloud for free!
 
-If, on the other hand, you are an experienced developerwho is comfortable working with command line and want root access so you can fully customize your server, an Unmanaged VPS would be a better option for you.</div>
+If, on the other hand, you are an experienced developerwho is comfortable working with command line and want root access so you can fully customize your server, an Unmanaged Cloud would be a better option for you.</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Why Should I Have Prohost Managed my VPS?</a>
-              <div class="acco-des">When you think of VPS Hosting, you probably think of a hosting solution featuring more resources and more power. You're certainly correct on both accounts. You may also think that a VPS is designed only for web developers with years of experience. This may be the case at some hosting providers. That's not the case at ProHost Hosting.
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Why Should I Have Prohost Managed my Cloud?</a>
+              <div class="acco-des">When you think of Cloud Hosting, you probably think of a hosting solution featuring more resources and more power. You're certainly correct on both accounts. You may also think that a Cloud is designed only for web developers with years of experience. This may be the case at some hosting providers. That's not the case at ProHost Hosting.
 
-Our Managed VPS plans include the user-friendly cPanel control panel that you use and love on our Web Hosting plans. That means you get the power and resources of a VPS, but the same ease of use found with our Web Hosting plans. It's the best of both worlds!.</div>
+Our Managed Cloud plans include the user-friendly cPanel control panel that you use and love on our Web Hosting plans. That means you get the power and resources of a Cloud, but the same ease of use found with our Web Hosting plans. It's the best of both worlds!.</div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="accordion-close accordion-07">
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Do I Get Root Level Access With Managed VPS?</a>
-              <div class="acco-des">Yes, our Managed Virtual Private Server plans are user-friendly. That's not to say we don't have virtual private servers plans designed for more advanced users. Our Managed VPS Hosting also includes administrative level, root access and management via code line!</div>
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Do I Get Root Level Access With Managed Cloud?</a>
+              <div class="acco-des">Yes, our Managed Virtual Private Server plans are user-friendly. That's not to say we don't have virtual private servers plans designed for more advanced users. Our Managed Cloud Hosting also includes administrative level, root access and management via code line!</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I upgrade my VPS?
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I upgrade my Cloud?
             </a>
-              <div class="acco-des">Definitely. Our Prohost VPS hosting platform is scalable. It allows you to add more RAM to your existing plan – or upgrade your plan to higher CPU, RAM and storage with just a click — no more manual migrations.</div>
+              <div class="acco-des">Definitely. Our Prohost Cloud hosting platform is scalable. It allows you to add more RAM to your existing plan – or upgrade your plan to higher CPU, RAM and storage with just a click — no more manual migrations.</div>
             </div>
-            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I host several websites on a VPS?</a>
-              <div class="acco-des">You bet. With VPS Hosting, you create and manage multiple sites for your clients on a single VPS. Additionally, when using cPanel/WHM on your server, you can install multiple cPanel accounts and configure specific (RAM and storage) resources for each hosting account — then charge your client accordingly.
+            <div class="acco-group card"> <a href="#" class="acco-heading"><i class="only-icon-20 fa fa-lock m-10px-r"></i> Can I host several websites on a Cloud?</a>
+              <div class="acco-des">You bet. With Cloud Hosting, you create and manage multiple sites for your clients on a single Cloud. Additionally, when using cPanel/WHM on your server, you can install multiple cPanel accounts and configure specific (RAM and storage) resources for each hosting account — then charge your client accordingly.
               </div>
             </div>
           </div>
@@ -522,9 +522,9 @@ Our Managed VPS plans include the user-friendly cPanel control panel that you us
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="ion ion-md-mail-open"></i> </div>
-            <h5 class="m-10px-b">Email Hosting</h5>
+            <h5 class="m-10px-b">Exchange Email</h5>
             <p class="m-0px">Manage mail services in the name of your business of choice</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="email-hosting.html">Learn More</a> </div>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="exchange-email.html">Learn More</a> </div>
           </div>
         </div>
         <div class="col-lg-4 m-15px-tb">
