--- a/windows-cloud.html
+++ b/windows-cloud.html
@@ -70,7 +70,7 @@
                 <li><a href="Microsoft-Office-365.html">Microsoft Office 365
                 </a></li>
                 <li><a href="Google-Workspace.html">Google Workspace</a></li>
-                <li><a href="email-hosting.html">Exchange Email</a></li>
+                <li><a href="exchange-email.html">Exchange Email</a></li>
               </ul>
             </li>
           
@@ -428,9 +428,9 @@
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="ion ion-md-mail-open"></i> </div>
-            <h5 class="m-10px-b">Email Hosting</h5>
+            <h5 class="m-10px-b">Exchange Email</h5>
             <p class="m-0px">Manage mail services in the name of your business of choice</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="email-hosting.html">Learn More</a> </div>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="exchange-email.html">Learn More</a> </div>
           </div>
         </div>
         <div class="col-lg-4 m-15px-tb">
