--- a/term-and-tonditions.html
+++ b/term-and-tonditions.html
@@ -70,7 +70,7 @@
                 <li><a href="Microsoft-Office-365.html">Microsoft Office 365
                 </a></li>
                 <li><a href="Google-Workspace.html">Google Workspace</a></li>
-                <li><a href="email-hosting.html">Exchange Email</a></li>
+                <li><a href="exchange-email.html">Exchange Email</a></li>
               </ul>
             </li>
           
