--- a/index.html
+++ b/index.html
@@ -622,18 +622,19 @@
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">More Links</h5>
           <ul class="list-unstyled links-dark footer-link-2">
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
             <li><a href="#">Careers</a></li>
             <li><a href="#">Branches</a></li>
-            <li><a href="#">Blog</a></li>
             <li><a href="#">Our Profile</a></li>
-            <li><a href="#">Why Prohost?</a></li>
           </ul>
         </div>
-        <div class="col-6 col-lg-2 m-15px-tb">
+        <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html">Contact Us</a></li>
+              <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
+              <li><a href="domain-register.html">Doamin Register</a></li>
+              <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
           </ul>
@@ -642,25 +643,26 @@
     </div>
   </div>
   <!--certificet-->
-  <div class="footer-bottom footer-border-dark position-relative">
-    <div class="container">
-  <div class="row justify-content-center align-items-center">
-    <div class="col-6 col-lg-2 m-15px-tb">
-      
-      <img src="images/ISO-001-1-150x150.png" alt="">
-    </div>
-    <div class="col-6 col-lg-2 m-15px-tb">
-      <img src="images/ISO-005-1-150x150.png" alt="">
-    </div>
-    <div class="col-6 col-lg-2 m-15px-tb">
-      <img src="images/ISO-004-1-150x150.png" alt="">
-    </div>
-    <div class="col-6 col-lg-2 m-15px-tb">
-      <img src="images/ISO-003-1-150x150.png" alt="">
+  <div class="">
+    <div class="footer-bottom footer-border-dark position-relative pro-f">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-001-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-005-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-004-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-003-1-150x150.png" alt="">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
   <div class="footer-bottom footer-border-dark position-relative theme-bg white-color ">
     <div class="container">
       <div class="row align-items-center">
