copy pest index footer hole site

--- a/index.html
+++ b/index.html
@@ -603,9 +603,9 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
             <li><a href="saudi-domain-registration.html"> Saudi Domain </a></li>
-            <li><a href="cloud-vps-server.html">Cloud Server</a></li>
+            <li><a href="linux-cloud.html">Cloud Server</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="email-hosting.html">Email Hosting</a></li>
+            <li><a href="exchange-email.html">Exchange Email</a></li>
           </ul>
         </div>
         <!--
