--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -280,12 +280,13 @@
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
+            <li><a href="saudi-domain-registration.html"> Saudi Domain </a></li>
             <li><a href="cloud-vps-server.html">Cloud Server</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="email-hosting.html">Email Hosting</a></li>
+            <li><a href="exchange-email.html">Exchange Email</a></li>
           </ul>
         </div>
+        <!--
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Support</h5>
           <ul class="list-unstyled links-dark footer-link-2">
@@ -295,12 +296,23 @@
             <li><a href="https://my.prohost.sa/knowledgebase">Knowledgebase</a></li>
             <li><a href="https://my.prohost.sa/serverstatus.php">Network Status</a></li>
           </ul>
-        </div>
+        </div>-->
         <div class="col-6 col-lg-2 m-15px-tb">
+          <h5 class="footer-title">More Links</h5>
+          <ul class="list-unstyled links-dark footer-link-2">
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Branches</a></li>
+            <li><a href="#">Our Profile</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html">Contact Us</a></li>
+              <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
+              <li><a href="domain-register.html">Doamin Register</a></li>
+              <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
           </ul>
@@ -308,7 +320,28 @@
       </div>
     </div>
   </div>
-  <div class="footer-bottom footer-border-dark position-relative">
+  <!--certificet-->
+  <div class="">
+    <div class="footer-bottom footer-border-dark position-relative pro-f">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-001-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-005-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-004-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-003-1-150x150.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom footer-border-dark position-relative theme-bg white-color ">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
