--- a/cyber-security.html
+++ b/cyber-security.html
@@ -263,9 +263,9 @@
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="fas fa-hdd"></i> </div>
-            <h5 class="m-10px-b">Cloud VPS</h5>
+            <h5 class="m-10px-b">Cloud Server</h5>
             <p class="m-0px">Use more resources at your request with exceptional services</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="cloud-vps-server.html">Learn More</a> </div>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="linux-cloud.html">Learn More</a> </div>
           </div>
         </div>
       </div>
@@ -294,12 +294,13 @@
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
-            <li><a href="cloud-vps-server.html">Cloud Server</a></li>
+            <li><a href="saudi-domain-registration.html"> Saudi Domain </a></li>
+            <li><a href="linux-cloud.html">Cloud Server</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="email-hosting.html">Email Hosting</a></li>
+            <li><a href="exchange-email.html">Exchange Email</a></li>
           </ul>
         </div>
+        <!--
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Support</h5>
           <ul class="list-unstyled links-dark footer-link-2">
@@ -309,12 +310,23 @@
             <li><a href="https://my.prohost.sa/knowledgebase">Knowledgebase</a></li>
             <li><a href="https://my.prohost.sa/serverstatus.php">Network Status</a></li>
           </ul>
-        </div>
+        </div>-->
         <div class="col-6 col-lg-2 m-15px-tb">
+          <h5 class="footer-title">More Links</h5>
+          <ul class="list-unstyled links-dark footer-link-2">
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Branches</a></li>
+            <li><a href="#">Our Profile</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html">Contact Us</a></li>
+              <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
+              <li><a href="domain-register.html">Doamin Register</a></li>
+              <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
           </ul>
@@ -322,7 +334,28 @@
       </div>
     </div>
   </div>
-  <div class="footer-bottom footer-border-dark position-relative">
+  <!--certificet-->
+  <div class="">
+    <div class="footer-bottom footer-border-dark position-relative pro-f">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-001-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-005-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-004-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-003-1-150x150.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom footer-border-dark position-relative theme-bg white-color ">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
