change footer certificate hole site

--- a/cyber-security.html
+++ b/cyber-security.html
@@ -263,7 +263,7 @@
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="fas fa-hdd"></i> </div>
-            <h5 class="m-10px-b">Cloud Server</h5>
+            <h5 class="m-10px-b">Linux Cloud</h5>
             <p class="m-0px">Use more resources at your request with exceptional services</p>
             <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="linux-cloud.html">Learn More</a> </div>
           </div>
@@ -273,6 +273,7 @@
   </section>
 </main>
 </main>
+
 <!--starting footer-->
 <footer class="footer">
   <div class="footer-top footer-border-dark">
@@ -294,8 +295,8 @@
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="saudi-domain-registration.html"> Saudi Domain </a></li>
-            <li><a href="linux-cloud.html">Cloud Server</a></li>
+            <li><a href="linux-cloud.html"> Linux Cloud </a></li>
+            <li><a href="windows-cloud.html">Windows Cloud</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="exchange-email.html">Exchange Email</a></li>
           </ul>
@@ -343,13 +344,13 @@
             <img class="pro-f-image" src="images/ISO-001-1-150x150.png" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/ISO-005-1-150x150.png" alt="">
+            <img class="pro-f-image" src="images/ISO 27001-Professional Hosting Company For Information Technology.jpg" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/ISO-004-1-150x150.png" alt="">
+            <img class="pro-f-image" src="images/BQSR-ISO 27018 -Professional Hosting Company For Information Technology.jpg" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/ISO-003-1-150x150.png" alt="">
+            <img class="pro-f-image" src="images/BQSR-ISO 27017  -Professional Hosting Company For Information Technology.jpg" alt="">
           </div>
         </div>
       </div>
