--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -259,6 +259,7 @@
     </div>
   </section>
 </main>
+
 <!--starting footer-->
 <footer class="footer">
   <div class="footer-top footer-border-dark">
@@ -280,8 +281,8 @@
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="saudi-domain-registration.html"> Saudi Domain </a></li>
-            <li><a href="cloud-vps-server.html">Cloud Server</a></li>
+            <li><a href="linux-cloud.html"> Linux Cloud </a></li>
+            <li><a href="windows-cloud.html">Windows Cloud</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
             <li><a href="exchange-email.html">Exchange Email</a></li>
           </ul>
@@ -329,13 +330,13 @@
             <img class="pro-f-image" src="images/ISO-001-1-150x150.png" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/ISO-005-1-150x150.png" alt="">
+            <img class="pro-f-image" src="images/ISO 27001-Professional Hosting Company For Information Technology.jpg" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/ISO-004-1-150x150.png" alt="">
+            <img class="pro-f-image" src="images/BQSR-ISO 27018 -Professional Hosting Company For Information Technology.jpg" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/ISO-003-1-150x150.png" alt="">
+            <img class="pro-f-image" src="images/BQSR-ISO 27017  -Professional Hosting Company For Information Technology.jpg" alt="">
           </div>
         </div>
       </div>
