--- a/wordpress-hosting.html
+++ b/wordpress-hosting.html
@@ -442,32 +442,33 @@
       <div class="row">
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
-            <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="ion ion-md-laptop"></i> </div>
-            <h5 class="m-10px-b">WordPress Hosting</h5>
-            <p class="m-0px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="#">Learn More</a> </div>
+            <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"><i class="fas fa-server"></i> </div>
+            <h5 class="m-10px-b">Dedicated Server</h5>
+            <p class="m-0px">Powerful & Scalable Server with Complete Root Access</p>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="dedicated-server.html">Learn More</a> </div>
           </div>
         </div>
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="ion ion-md-mail-open"></i> </div>
-            <h5 class="m-10px-b">Dedicated Server</h5>
-            <p class="m-0px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="#">Learn More</a> </div>
+            <h5 class="m-10px-b">Exchange Email</h5>
+            <p class="m-0px">Manage mail services in the name of your business of choice</p>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="exchange-email.html">Learn More</a> </div>
           </div>
         </div>
         <div class="col-lg-4 m-15px-tb">
           <div class="box-shadow-only-hover p-45px card border-radius-5 hover-top text-center align-items-center">
-            <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="ion ion-logo-angular"></i> </div>
-            <h5 class="m-10px-b">Cloud Hosting</h5>
-            <p class="m-0px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="#">Learn More</a> </div>
+            <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="fas fa-hdd"></i> </div>
+            <h5 class="m-10px-b">Linux Cloud </h5>
+            <p class="m-0px">Use more resources at your request with exceptional services</p>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="linux-cloud.html">Learn More</a> </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 </main>
+
 <!--starting footer-->
 <footer class="footer">
   <div class="footer-top footer-border-dark">
@@ -480,7 +481,7 @@
             <h5 class="m-20px-b"> Connect with Prohost</h5>
             <p class="font-small m-0px"><b>Sales: </b>sales@prohost.sa</p><br>
             <p class="font-small m-0px"><b>Support: </b>support@prohost.sa</p> <br>
-            <p class="font-small m-0px"><b>Mobile: </b>+966550243031</p><br>
+            <p class="font-small m-0px"><b>Mobile: </b>+966500211272</p><br>
             <p class="font-small m-0px"><b>Phone: </b>8002472030</p>
           </div>
           
@@ -489,12 +490,13 @@
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
-            <li><a href="cloud-vps-server.html">Cloud VPS Servers</a></li>
+            <li><a href="linux-cloud.html"> Linux Cloud </a></li>
+            <li><a href="windows-cloud.html">Windows Cloud</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="email-hosting.html">Email Hosting</a></li>
+            <li><a href="exchange-email.html">Exchange Email</a></li>
           </ul>
         </div>
+        <!--
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Support</h5>
           <ul class="list-unstyled links-dark footer-link-2">
@@ -504,12 +506,23 @@
             <li><a href="https://my.prohost.sa/knowledgebase">Knowledgebase</a></li>
             <li><a href="https://my.prohost.sa/serverstatus.php">Network Status</a></li>
           </ul>
-        </div>
+        </div>-->
         <div class="col-6 col-lg-2 m-15px-tb">
+          <h5 class="footer-title">More Links</h5>
+          <ul class="list-unstyled links-dark footer-link-2">
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Branches</a></li>
+            <li><a href="#">Our Profile</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html">Contact Us</a></li>
+              <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
+              <li><a href="domain-register.html">Doamin Register</a></li>
+              <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
           </ul>
@@ -517,14 +530,35 @@
       </div>
     </div>
   </div>
-  <div class="footer-bottom footer-border-dark position-relative">
+  <!--certificet-->
+  <div class="">
+    <div class="footer-bottom footer-border-dark position-relative pro-f">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO-001-1-150x150.png" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/ISO 27001-Professional Hosting Company For Information Technology.jpg" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/BQSR-ISO 27018 -Professional Hosting Company For Information Technology.jpg" alt="">
+          </div>
+          <div class="col-2 col-lg-2 p-0">
+            <img class="pro-f-image" src="images/BQSR-ISO 27017  -Professional Hosting Company For Information Technology.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom footer-border-dark position-relative theme-bg white-color ">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
-          <p class="m-0px font-small">© 2023 copyright all right reserved || ProHost.Sa</p>
+          <p class="m-0px font-small">© 2005-2023 copyright all right reserved || Prohost.sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
-          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966550243031"><i class="fab fa-whatsapp"></i></a> </div>
+          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966500211272"><i class="fab fa-whatsapp"></i></a> </div>
         </div>
       </div>
     </div>
